--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -1,11 +1,23 @@
-[parser]
+[parser_good]
 
 input = true
-input_dir = ${TESTME_CATEGORY_DIR}
+input_dir = ${TESTME_TESTDIR}/parser/good
 input_ext = py
 cmd_line = ../typy -p ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
+[parser_bad]
+
+input = true
+input_dir = ${TESTME_TESTDIR}/parser/bad
+input_ext = py
+cmd_line = ../typy -p ${TESTME_RUNNING_INPUT} 2> /dev/null
+check_code = true
+error_code = 3
 display_ok_tests = false
 diplay_ko_tests = true
 display_summary = true
