--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ add_executable(typy
 
                src/ast/ast.cc
                src/ast/stmt.cc
+               src/ast/pass-stmt.cc
                src/ast/pretty-printer.cc
                src/ast/tasks.cc
 
