--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -1,9 +1,11 @@
-[parser_good]
+[ast]
 
 input = true
-input_dir = ${TESTME_TESTDIR}/parser/good
+stdout = true
+input_dir = ${TESTME_TESTDIR}/ast/input
+stdout_dir = ${TESTME_TESTDIR}/ast/output
 input_ext = py
-cmd_line = ../typy -p ${TESTME_RUNNING_INPUT}
+cmd_line = ../typy -P ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -21,3 +23,16 @@ error_code = 3|2
 display_ok_tests = false
 diplay_ko_tests = true
 display_summary = true
+
+[parser_good]
+
+input = true
+input_dir = ${TESTME_TESTDIR}/parser/good
+input_ext = py
+cmd_line = ../typy -p ${TESTME_RUNNING_INPUT}
+check_code = true
+error_code = 0
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
