Add string support + pretty printing + tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ add_executable(typy
                src/ast/unary-expr.cc
                src/ast/op-expr.cc
                src/ast/numeral-expr.cc
+               src/ast/string-expr.cc
                src/ast/pretty-printer.cc
                src/ast/tasks.cc
 
