--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ add_executable(typy
                src/ast/stmt.cc
                src/ast/expr.cc
                src/ast/if-stmt.cc
+               src/ast/while-stmt.cc
                src/ast/pass-stmt.cc
                src/ast/break-stmt.cc
                src/ast/continue-stmt.cc
