--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,10 +110,13 @@ add_executable(typy
                src/ast/break-stmt.cc
                src/ast/continue-stmt.cc
                src/ast/expr-stmt.cc
+               src/ast/assign-expr.cc
                src/ast/unary-expr.cc
                src/ast/op-expr.cc
                src/ast/numeral-expr.cc
                src/ast/string-expr.cc
+               src/ast/var.cc
+               src/ast/id-var.cc
                src/ast/pretty-printer.cc
                src/ast/tasks.cc
 
