Add function dec + pretty printing + test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ add_executable(typy
                src/ast/break-stmt.cc
                src/ast/continue-stmt.cc
                src/ast/expr-stmt.cc
+               src/ast/function-dec.cc
                src/ast/assign-expr.cc
                src/ast/unary-expr.cc
                src/ast/op-expr.cc
