--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -17,7 +17,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/parser/bad
 input_ext = py
-cmd_line = ../typy -p ${TESTME_RUNNING_INPUT} 2> /dev/null
+cmd_line = ../typy -p ${TESTME_RUNNING_INPUT} &> /dev/null
 check_code = true
 error_code = 3|2
 display_ok_tests = false
