Add task to delete ast in memory

--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -5,7 +5,7 @@ stdout = true
 input_dir = ${TESTME_TESTDIR}/ast/input
 stdout_dir = ${TESTME_TESTDIR}/ast/output
 input_ext = py
-cmd_line = ../typy -P ${TESTME_RUNNING_INPUT}
+cmd_line = ../typy -PD ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -17,7 +17,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/parser/bad
 input_ext = py
-cmd_line = ../typy -p ${TESTME_RUNNING_INPUT} &> /dev/null
+cmd_line = ../typy -pD ${TESTME_RUNNING_INPUT} &> /dev/null
 check_code = true
 error_code = 3|2
 display_ok_tests = false
@@ -29,7 +29,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/parser/good
 input_ext = py
-cmd_line = ../typy -p ${TESTME_RUNNING_INPUT}
+cmd_line = ../typy -pD ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
