--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -12,6 +12,30 @@ display_ok_tests = false
 diplay_ko_tests = true
 display_summary = true
 
+[type_bad]
+
+input = true
+input_dir = ${TESTME_TESTDIR}/type/bad
+input_ext = py
+cmd_line = ../typy -tD ${TESTME_RUNNING_INPUT} &> /dev/null
+check_code = true
+error_code = 5
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
+[type_good]
+
+input = true
+input_dir = ${TESTME_TESTDIR}/type/good
+input_ext = py
+cmd_line = ../typy -tD ${TESTME_RUNNING_INPUT}
+check_code = true
+error_code = 0
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
 [binder_bad]
 
 input = true
