--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -12,6 +12,20 @@ display_ok_tests = false
 diplay_ko_tests = true
 display_summary = true
 
+[cloner]
+
+input = true
+stdout = true
+input_dir = ${TESTME_TESTDIR}/ast/input
+stdout_dir = ${TESTME_TESTDIR}/ast/output
+input_ext = py
+cmd_line = ../typy --clone -PD ${TESTME_RUNNING_INPUT}
+check_code = true
+error_code = 0
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
 [type_bad]
 
 input = true
