Add Function call desugar and it test suite

--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -26,6 +26,32 @@ display_ok_tests = false
 diplay_ko_tests = true
 display_summary = true
 
+[funcall_desugar]
+
+input = true
+stdout = true
+input_dir = ${TESTME_TESTDIR}/desugar/funcall/input
+stdout_dir = ${TESTME_TESTDIR}/desugar/funcall/output
+input_ext = py
+cmd_line = ../typy -fP ${TESTME_RUNNING_INPUT}
+check_code = true
+error_code = 0
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
+[funcall_desugar_bad]
+
+input = true
+input_dir = ${TESTME_TESTDIR}/desugar/funcall/bad
+input_ext = py
+cmd_line = ../typy -fP ${TESTME_RUNNING_INPUT} &> /dev/null
+check_code = true
+error_code = 5
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
 [type_bad]
 
 input = true
