--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -40,6 +40,20 @@ display_ok_tests = false
 diplay_ko_tests = true
 display_summary = true
 
+[fundec_desugar]
+
+input = true
+stdout = true
+input_dir = ${TESTME_TESTDIR}/desugar/fundec/input
+stdout_dir = ${TESTME_TESTDIR}/desugar/fundec/output
+input_ext = py
+cmd_line = ../typy -dP ${TESTME_RUNNING_INPUT}
+check_code = true
+error_code = 0
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
 [funcall_desugar_bad]
 
 input = true
