[BUILTIN] Add str declaration in builtin-library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,9 @@ ELSE(FLEX_FOUND)
    ENDIF(Flex_FIND_REQUIRED)
 ENDIF(FLEX_FOUND)
 
-set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -std=c++0x -I${CMAKE_CURRENT_SOURCE_DIR}/src -I${CMAKE_CURRENT_SOURCE_DIR}/lib -O0 -g -ggdb")
+set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -std=c++11 -I${CMAKE_CURRENT_SOURCE_DIR}/src -I${CMAKE_CURRENT_SOURCE_DIR}/lib -O0 -g -ggdb")
 
-set(CMAKE_CXX_FLAGS_RELEASE "-Wall -Wextra -std=c++0x -I${CMAKE_CURRENT_SOURCE_DIR}/src -I${CMAKE_CURRENT_SOURCE_DIR}/lib -O2 -s -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE "-Wall -Wextra -std=c++11 -I${CMAKE_CURRENT_SOURCE_DIR}/src -I${CMAKE_CURRENT_SOURCE_DIR}/lib -O2 -s -DNDEBUG")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG}")
 
 ADD_LIBRARY(typy_lib STATIC
