[GDESUGAR] Add Global Desugar

--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -40,6 +40,20 @@ display_ok_tests = false
 diplay_ko_tests = true
 display_summary = true
 
+[global_desugar]
+
+input = true
+stdout = true
+input_dir = ${TESTME_TESTDIR}/desugar/global/input
+stdout_dir = ${TESTME_TESTDIR}/desugar/global/output
+input_ext = py
+cmd_line = ../typy -gP ${TESTME_RUNNING_INPUT}
+check_code = true
+error_code = 0
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
 [fundec_desugar]
 
 input = true
