--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -5,7 +5,7 @@ stdout = true
 input_dir = ${TESTME_TESTDIR}/ast/input
 stdout_dir = ${TESTME_TESTDIR}/ast/output
 input_ext = py
-cmd_line = ../typy -PD ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy -PD ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -19,7 +19,7 @@ stdout = true
 input_dir = ${TESTME_TESTDIR}/ast/input
 stdout_dir = ${TESTME_TESTDIR}/ast/output
 input_ext = py
-cmd_line = ../typy --clone -PD ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy --clone -PD ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -33,7 +33,7 @@ stdout = true
 input_dir = ${TESTME_TESTDIR}/desugar/funcall/input
 stdout_dir = ${TESTME_TESTDIR}/desugar/funcall/output
 input_ext = py
-cmd_line = ../typy -fP ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy -fP ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -47,7 +47,7 @@ stdout = true
 input_dir = ${TESTME_TESTDIR}/desugar/global/input
 stdout_dir = ${TESTME_TESTDIR}/desugar/global/output
 input_ext = py
-cmd_line = ../typy -gP ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy -gP ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -61,7 +61,7 @@ stdout = true
 input_dir = ${TESTME_TESTDIR}/desugar/fundec/input
 stdout_dir = ${TESTME_TESTDIR}/desugar/fundec/output
 input_ext = py
-cmd_line = ../typy -dP ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy -dP ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -73,7 +73,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/desugar/funcall/bad
 input_ext = py
-cmd_line = ../typy -fP ${TESTME_RUNNING_INPUT} &> /dev/null
+cmd_line = ../repy -fP ${TESTME_RUNNING_INPUT} &> /dev/null
 check_code = true
 error_code = 5
 display_ok_tests = false
@@ -85,7 +85,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/type/bad
 input_ext = py
-cmd_line = ../typy -tD ${TESTME_RUNNING_INPUT} &> /dev/null
+cmd_line = ../repy -tD ${TESTME_RUNNING_INPUT} &> /dev/null
 check_code = true
 error_code = 5
 display_ok_tests = false
@@ -97,7 +97,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/type/good
 input_ext = py
-cmd_line = ../typy -tD ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy -tD ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -109,7 +109,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/bind/bad
 input_ext = py
-cmd_line = ../typy -bD ${TESTME_RUNNING_INPUT} &> /dev/null
+cmd_line = ../repy -bD ${TESTME_RUNNING_INPUT} &> /dev/null
 check_code = true
 error_code = 4
 display_ok_tests = false
@@ -121,7 +121,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/bind/good
 input_ext = py
-cmd_line = ../typy -bD ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy -bD ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -133,7 +133,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/parser/bad
 input_ext = py
-cmd_line = ../typy -pD ${TESTME_RUNNING_INPUT} &> /dev/null
+cmd_line = ../repy -pD ${TESTME_RUNNING_INPUT} &> /dev/null
 check_code = true
 error_code = 3|2
 display_ok_tests = false
@@ -145,7 +145,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/parser/good
 input_ext = py
-cmd_line = ../typy -pD ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy -pD ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
