--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-Wall -Wextra -std=c++11 -I${CMAKE_CURRENT_SOURCE_D
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG}")
 
 ADD_LIBRARY(repy_lib STATIC
-            lib/repy/repy.cc
+            lib/repy/builtin.cc
             )
 
 SET_TARGET_PROPERTIES(
