Add some tests for cpp generator

--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -12,6 +12,22 @@ display_ok_tests = false
 diplay_ko_tests = true
 display_summary = true
 
+[final]
+
+input = true
+stdin = true
+stdout = true
+input_dir = ${TESTME_CATEGORY_DIR}/input
+stdin_dir = ${TESTME_CATEGORY_DIR}/stdin
+stdout_dir = ${TESTME_CATEGORY_DIR}/stdout
+input_ext = py
+cmd_line = ../repy -c ${TESTME_RUNNING_INPUT} > /tmp/${TESTME_TEMPFILE}.cc; g++ -std=c++11 -I../lib -o /tmp/${TESTME_TEMPFILE} /tmp/${TESTME_TEMPFILE}.cc ../librepy.a &> /dev/null; /tmp/${TESTME_TEMPFILE}
+check_code = true
+error_code = 0
+display_ok_tests = false
+diplay_ko_tests = true
+display_summary = true
+
 [cloner]
 
 input = true
