--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,7 @@ add_executable(repy
                src/ast/var.cc
                src/ast/id-var.cc
                src/ast/function-var.cc
+               src/ast/field-var.cc
                src/ast/pretty-printer.cc
                src/ast/typed.cc
                src/ast/tasks.cc
