--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -47,7 +47,7 @@ stdout = true
 input_dir = ${TESTME_TESTDIR}/desugar/funcall/input
 stdout_dir = ${TESTME_TESTDIR}/desugar/funcall/output
 input_ext = py
-cmd_line = ../repy -fP ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy -tP ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -75,7 +75,7 @@ stdout = true
 input_dir = ${TESTME_TESTDIR}/desugar/fundec/input
 stdout_dir = ${TESTME_TESTDIR}/desugar/fundec/output
 input_ext = py
-cmd_line = ../repy -dP ${TESTME_RUNNING_INPUT}
+cmd_line = ../repy -tP ${TESTME_RUNNING_INPUT}
 check_code = true
 error_code = 0
 display_ok_tests = false
@@ -87,7 +87,7 @@ display_summary = true
 input = true
 input_dir = ${TESTME_TESTDIR}/desugar/funcall/bad
 input_ext = py
-cmd_line = ../repy -fP ${TESTME_RUNNING_INPUT} &> /dev/null
+cmd_line = ../repy -tP ${TESTME_RUNNING_INPUT} &> /dev/null
 check_code = true
 error_code = 5
 display_ok_tests = false
