[TEST] Add some tests

--- a/tests/testme.conf
+++ b/tests/testme.conf
@@ -20,7 +20,7 @@ compare = true
 input_dir = ${TESTME_CATEGORY_DIR}/input
 stdin_dir = ${TESTME_CATEGORY_DIR}/stdin
 input_ext = py
-cmd_line = ../repy -c ${TESTME_RUNNING_INPUT} > /tmp/${TESTME_TEMPFILE}.cc; g++ -std=c++11 -I../lib -o /tmp/${TESTME_TEMPFILE} /tmp/${TESTME_TEMPFILE}.cc ../librepy.a &> /dev/null; /tmp/${TESTME_TEMPFILE}
+cmd_line = ../repy -hc ${TESTME_RUNNING_INPUT} > /tmp/${TESTME_TEMPFILE}.cc; g++ -std=c++11 -I../lib -o /tmp/${TESTME_TEMPFILE} /tmp/${TESTME_TEMPFILE}.cc ../librepy.a &> /dev/null; /tmp/${TESTME_TEMPFILE}
 compare_cmd = python3 ${TESTME_RUNNING_INPUT}
 display_ok_tests = false
 diplay_ko_tests = true
